Fixed vertical align, width and font-size

--- a/style.css
+++ b/style.css
@@ -9,43 +9,42 @@ html {
 }
 body {
     background-color: hsl(212, 45%, 89%);
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
     display: flex;
+    align-items: center;
     justify-content: center;
 }
 .main-container {
     background-color: hsl(0, 0%, 100%);
     border-radius: 16px;
-    /* margin-top: 20px; */
-    width: 360px;
+    width: 330px;
     display: flex;
     flex-direction: column;
-    position: absolute;
-    top: 10%;
 }
 .main-container__qr {
-    margin: 16px auto;
-    padding: 4px;
+    margin: 15px auto;
 }
 .main-container__qr img {
-    width: 320px;
+    width: 300px;
     border-radius: 10px;
 }
 .main-information {
     margin: 0px 26px;    
 }
-.main-information__title {
+.main-information__title h1 {
     color: hsl(218, 44%, 22%);
-    font-size: 2.5rem;
+    font-size: 2.2rem;
     font-weight: 700;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 16px;
+    padding-top: 8px;
 }
 .main-information__description {
     color: hsl(220, 15%, 55%);
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     text-align: center;
-    margin-bottom: 24px;
+    margin: 0 8px 16px;
 }
 .attribution {
     color: hsl(220, 15%, 55%);
@@ -59,6 +58,7 @@ body {
 }
 @media (max-width: 500px) {
     .main-container {
-        top: 6%;
+        position: absolute;
+        top: 5%;
     }
 }
